refactor : 코드 컨벤션(들여쓰기, 개행 줄) 적용